# ship-routing

./: .gitignore  ALGORITHM_COMPLEXITY_ANALYSIS.md  API_DOCUMENTATION.md  CLEANUP_SUMMARY.md  README.md  SCIENTIFIC_BASIS.md
backend/: .env.example  .gitignore  API_REFERENCE.md  MARITIME_ROUTING_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_STRUCTURE.md  README.md  WEATHER_API_SETUP.md  main.py  pyproject.toml
backend/app/algorithms/: d_star.py  grid_based_rrt_star.py  hybrid_bidirectional_rrt_star.py  maritime_astar.py  rrt_star.py
backend/app/api/routes/: auth.py  routes.py  weather.py
backend/app/core/: config.py  security.py
backend/app/models/: schemas.py
backend/app/services/: fuel_model.py  grid_cache.py  hazard_detection.py  land_detection.py  ocean_grid.py  real_time_weather.py  route_calculator.py  weather.py  weather_cmems.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AuthForm.tsx  MapDisplay.tsx  Navbar.tsx  RouteCalculator.tsx  RouteManager.tsx  RouteResults.tsx  ThemeToggle.tsx
frontend/src/data/: ports.ts
frontend/src/pages/: Router.tsx
frontend/src/services/: api.ts
frontend/src/stores/: auth.ts  route.ts  theme.ts
frontend/src/styles/: globals.css  map.css
