[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.0",
    "geopy>=2.4.1",
    "numpy>=2.3.4",
    "passlib>=1.7.4",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-jose[cryptography]>=3.5.0",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "uvicorn>=0.38.0",
]
